# rust-cards-api

./: .dockerignore  .env.local.template  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  justfile
.cursor/plans/: image-sampler-cli_69bb86d6.plan.md
.cursor/rules/: rust-modules.md  rust-modules.mdc  write-down-plans.md  write-down-plans.mdc
.github/workflows/: deploy-demo-ui.yml
alt-indexer/: Cargo.toml  release_run_all.bat
alt-indexer/docs/: card-format.md
alt-indexer/plans/: 01-idgd-bitset-indexer.md  02-idgd-compact-card-format.md  04-merge-indexes.md  05-bench-query.md  07-per-ability-bitmaps.plan.md  09-query-refid.md  10-additional-family-metadata.md  11-extra-filters.md  12-bench-query-select-profiling.md  idgd-bitset-indexer.md  idgd-compact-card-format.md  merge-indexes.md  stats-indexer.md
alt-indexer/src/: audit_missing.rs  bench_query.rs  bitmap.rs  build.rs  card.rs  catalog.rs  cli.rs  compact.rs  extra_catalog.rs  faction_display.rs  idgd_catalog.rs  lib.rs  main.rs  merge.rs  path.rs  profile.rs  progress.rs  query.rs  stat_index.rs
alt-indexer/tests/: add_extra_filter.rs  audit_missing.rs  build_limit.rs  build_tmp.rs  merge_tmp.rs
alt-indexer/tests/card-json/: ALT_COREKS_B_MU_22_U_3140.json
alt-indexer/tmp/: ALT_COREKS_B_AX_06_U_5.json  ALT_COREKS_B_OR_16_U_6.json
cli-indexer/: Cargo.toml  release_run_all.bat
cli-indexer/plans/: 05-bench-query.md  06-multi-idgd-query.md  07-per-ability-bitmaps.plan.md  08-audit-missing.md  X-1-build-performance-analysis.md
cli-indexer/src/: bench_query.rs  cli.rs  lib.rs  main.rs
cli-indexer/tests/: add_extra_filter.rs  audit_missing.rs  build_limit.rs  build_tmp.rs  merge_tmp.rs
demo-ui/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo-ui/plans/: 01-initial-version.md  02-effects-autocomplete.md  03-github-pages.md  04-inner-scroll-layout.md  05-effects-filtered-narrowing.md  06-lazy-loading-card-renderer.md
demo-ui/src/: App.tsx  altered-card-renderer-minified.js  altered-card-renderer.d.ts  index.css  locale.ts  types.ts
docs/: ALL_SETS-index-format.md  api-spec.md  architecture.md  cli-reference.md
image-sampler/: Cargo.toml  README.md
image-sampler/src/: analyze.rs  cli.rs  combo.rs  download.rs  lib.rs  locale.rs  main.rs  plan.rs  progress.rs  resolve.rs  sample.rs  url.rs
index-core/: Cargo.toml
index-core/src/: add_extra_filter.rs  bitmap.rs  build.rs  card.rs  crawl.rs  decode.rs  extra_catalog.rs  faction_index.rs  idgd_catalog.rs  lib.rs  path.rs  profile.rs  query.rs  (+2 more)
uniques-http-api/: .env.example  .env.local.template  Cargo.toml  README.md
uniques-http-api/config/: default.toml  local.toml.example
uniques-http-api/docs/: api-spec.md  architecture.md
uniques-http-api/plans/: 01-hello-world-server.md  02-load-index-appstate.md  03-cards-idgd-filtering.md  04-return-card-details.md  05-faction-and-cost-filtering.md  06-docker-cloud-run.md  07-add-effects-endpoint.md  08-set-filters.md  09-search-by-name.md  10-get-card-by-refid-endpoint.md  11-effects-filtered-endpoint.md  12-with-families.md  13-index-hot-reload.md  14-effect-match-count-filtering.md  15-load-index-from-archive.md  16-gcs-index-load-reload.md  17-format-filters.md  18-collections.md
uniques-http-api/src/: cards.rs  collections.rs  config.rs  effects.rs  effects_filtered.rs  env.rs  formats.rs  http.rs  index.rs  lib.rs  loader.rs  main.rs  state.rs
uniques-http-api/src/collections/: build.rs  parse.rs  store.rs
uniques-http-api/src/formats/: build.rs  loader.rs  reload.rs  schema.rs  source.rs
uniques-http-api/src/http/: admin.rs  api.rs  extract.rs  state.rs
uniques-http-api/src/http/admin/: handlers.rs
uniques-http-api/src/http/api/: cards.rs  collections.rs  effects.rs  error.rs
uniques-http-api/src/http/api/cards/: handlers.rs  models.rs  parse.rs  test_support.rs
uniques-http-api/src/http/api/collections/: handlers.rs
uniques-http-api/src/http/api/effects/: filtered.rs  handlers.rs  list.rs  models.rs
uniques-http-api/src/index/: loader.rs  query.rs  reload.rs  uniques_index.rs
uniques-http-api/src/index/loader/: archive.rs  disk.rs  object_store.rs  storage.rs
uniques-http-api/src/index/query/: cards.rs  error.rs
uniques-http-api/src/index/reload/: disk.rs  mod.rs  remote.rs  source.rs  tick.rs
uniques-http-api/tests/: card_by_reference.rs  cards_debug_trigrams.rs  collections.rs  effects.rs  effects_filtered.rs  health.rs  load_index.rs  load_index_archive.rs  load_index_object_store.rs
uniques-http-api/tests/fixtures/collection/: random-100.txt  random-1000.txt
uniques-http-api/tests/fixtures/minimal_index/: catalog.json  factions_summary.json  idgd_catalog.json  manifest.json  stats_summary.json
(+22 files in other folders)
