[package]
name = "alt-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
roaring = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
