[package]
name = "alt-indexer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
regex = "1"
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir = "2"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
