[package]
name = "cli-indexer"
version.workspace = true
edition.workspace = true

[dependencies]
index-core = { path = "../index-core" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
