[package]
name = "image-sampler"
version.workspace = true
edition.workspace = true

[[bin]]
name = "image-sampler"
path = "src/main.rs"

[dependencies]
index-core = { path = "../index-core" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
indicatif = "0.17"
sha2 = "0.10"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
