[package]
name = "uniques-http-api"
version.workspace = true
edition.workspace = true

[dependencies]
index-core = { path = "../index-core" }
anyhow.workspace = true
axum = "0.8.4"
tower-http = { version = "0.6", features = ["cors"] }
roaring.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
async-trait = "0.1"
url = "2"
unicode-normalization = "0.1"
tar = "0.4"
zstd = "0.13"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json.workspace = true
uuid = { version = "1.17.0", features = ["v4"] }
tar = "0.4"
zstd = "0.13"
